--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+    text-align: center;
 }
 
 h1 {
@@ -12,4 +13,16 @@ h1 {
 
 #count {
     text-align: center;
+}
+
+#increment-btn {
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    font-weight: bold;
+    width: 200px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background: darkred;
 }
