--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+    font-size: large;
     text-align: center;
 }
 
@@ -13,6 +14,7 @@ h1 {
 
 #count {
     text-align: center;
+    color: white;
 }
 
 #increment-btn {
@@ -25,4 +27,8 @@ h1 {
     margin-bottom: 5px;
     border-radius: 5px;
     background: darkred;
+}
+
+#increment-btn:hover {
+    cursor: pointer;
 }
