--- a/style.css
+++ b/style.css
@@ -1,34 +1,43 @@
 body {
-    background-image: url("russia-tuapse-07072021-people-with-bags-at-the-station-of-the-city-of-tuapse-in-the-summer-high-quality-photo-2GH69JX.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
-    font-size: large;
-    text-align: center;
+  background-image: url("russia-tuapse-07072021-people-with-bags-at-the-station-of-the-city-of-tuapse-in-the-summer-high-quality-photo-2GH69JX.jpeg");
+  background-size: cover;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  font-size: xx-large;
+  text-align: center;
+  height: fit-content;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 #count {
-    text-align: center;
-    color: white;
+  text-align: center;
+  color: white;
+}
+
+button {
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+  font-weight: bold;
+  width: 200px;
+  margin-bottom: 5px;
+  border-radius: 5px;
 }
 
 #increment-btn {
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: white;
-    font-weight: bold;
-    width: 200px;
-    margin-bottom: 5px;
-    border-radius: 5px;
-    background: darkred;
+  background: darkred;
+}
+
+#save-btn {
+  background: darkgreen;
 }
 
 #increment-btn:hover {
-    cursor: pointer;
+  cursor: pointer;
+  box-shadow: inset 100px 0 0 0 #54b3d6;
+  color: white;
 }
