--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body {
   background-image: url("russia-tuapse-07072021-people-with-bags-at-the-station-of-the-city-of-tuapse-in-the-summer-high-quality-photo-2GH69JX.jpeg");
   background-size: cover;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   font-size: xx-large;
   text-align: center;
-  height: fit-content;
+  height: 100vh;
+}
+.container {
+  background: #fff;
+  max-width: 80%;
+  margin: auto;
+  border: 3px solid darkblue;
 }
 
 h1 {
@@ -14,7 +20,7 @@ h1 {
 
 #count {
   text-align: center;
-  color: white;
+  color: black;
 }
 
 button {
@@ -39,9 +45,9 @@ button {
 #increment-btn:hover {
   cursor: pointer;
   box-shadow: inset 100px 0 0 0 #54b3d6;
-  color: white;
+  color: black;
 }
 
 p {
-    color: white;
+    color: black;
 }
